--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,201 @@
 
 body {
     font-family: 'Rubik', sans-serif;
+     color: #465a64;
 }
+
+@font-face {
+    font-family: 'icomoon';
+    src: url('../fonts/icomoon.eot?cv5fej');
+    src: url('../fonts/icomoon.eot?cv5fej#iefix') format('embedded-opentype'),
+      url('../fonts/icomoon.ttf?cv5fej') format('truetype'),
+      url('../fonts/icomoon.woff?cv5fej') format('woff'),
+      url('../fonts/icomoon.svg?cv5fej#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"],
+  [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-search:before {
+    content: "\e903";
+  }
+  
+  .icon-facebook:before {
+    content: "\e900";
+  }
+  
+  .icon-instagram:before {
+    content: "\e901";
+  }
+  
+  .icon-linkedin:before {
+    content: "\e902";
+  }
+  
+  .icon-dribbble:before {
+    content: "\eaa7";
+  }
+
+.wrapper {
+    margin: 0 auto;
+    min-width: 1442px;
+}
+
+.title {
+    min-height: 100px;
+    background-color: #f5f8fb;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 39px 81px 38px 84px    ;
+}
+
+.logo {
+    max-width: 109px;
+    max-height: 23px;
+}
+
+.icon-phone {
+    max-width: 20px;
+    max-height: 20px;
+}
+
+.contacts {
+    text-decoration: none;
+    color: #282b2f;
+}
+
+.main-nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    list-style: none;
+    border: 1px solid #e0e9f0;
+    padding: 18px 0 14px 0;
+}
+
+.main-nav a {
+    text-decoration: none;
+    color: #282b2f;
+}
+
+.main-nav a:hover {
+    background-color: #f5f8fb;
+    padding: 20px 0px 15px 0px;
+    border-radius: 5px;
+}
+
+.breadcrumbs {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    font-size: 14px;
+}
+
+.breadcrumbs li {
+    margin-left: 10px;
+}
+
+.breadcrumbs a {
+    text-decoration: none;
+    color: #282b2f;
+}
+
+.title-content {
+    min-width: 844px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+}
+
+.sidebar {
+    min-width: 380px;
+    padding: 118px 80px 0 80px ;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  border-radius: 5px;
+  border: solid 2px #e0e9f0;
+  background-color: #fff;
+  padding: 15px 20px;
+  font-size: 16px;
+  line-height: 1;
+}
+
+.search-form {
+  position: relative;
+  margin-bottom: 35px;
+}
+
+.search-form .btn-search {
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  font-size: 25px;
+  top: 2px;
+  right: 2px;
+  bottom: 2px;
+  width: 50px;
+  cursor: pointer;
+  color:#009688;
+}
+
+.search-form .btn-search:hover {
+  background-color: rgb(170, 175, 180);
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.search-form .form-control {
+  padding-right: 60px;
+}
+
+.content {
+    min-width: 843px;
+    padding: 89px 58px 129px 57px;
+}
+
+.social-networks {
+    display: flex;;
+    list-style-type: none;
+  }
+  
+  .social-networks a {
+    text-align: center;
+    text-decoration: none;
+    width: 48px;
+    height: 48px;
+    margin: 0 10px 10px 0;
+    padding: 6px;
+    color: #546e7a;
+  }
+  
+  .social-networks a:hover {
+    background-color: #282b2f;
+    border: 1px solid #ccc;
+    border-radius: 24px;
+  }
+
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #e0e9f0;
+    padding: 46px 80px 46px 80px;
+  }
